--- a/counterButton.html
+++ b/counterButton.html
@@ -31,15 +31,34 @@
 
         <!-- contents to display upon clicking yes -->
         <div id="popup1-Yes-Contents">
-          <div id="groupTag"></div>
+          <h4>Please read the descriptions for the available room tags. Please note tags will disappear after 1 hour.</h4>
+          <div id="groupTag">
+            <form action ="/userTags.php" method = "POST">
+            <p>The group tag indicates a group of the amount of people that are working in the room.</p>
+            <h3>Group</h3>
+            <span>
+            <input type="checkbox" name="check2People" value="2">2<br>
+            <input type="checkbox" name="check3People" value="3">3<br>
+            <input type="checkbox" name="check4People" value="4">4<br>
+            <input type="checkbox" name="check5People" value="5">5+<br>
+          </span>
+          </div>
 
-          <div id="quietTag"></div>
+          <div id="quietTag">
+            <p>The quiet tag indicates this room can be used by anyone, but please do not disturb other people.</p>
+            <h3>Quiet</h3>
+            <input type="checkbox" name="quietCheck" value="quiet">Quiet Room<br>
+          </div>
 
-          <div id="privateTag"></div>
-
-          <button class="applyBtn" onclick=javascriptvoid(0);>Apply</button>
-
-          <button class="cancelBtn" onclick=javascriptvoid(0);>Cancel</button>
+          <div id="privateTag">
+            <p>The private tag indicates a group needs the room for a meeting, presentation etc.</p>
+            <h3>Private</h3>
+            <input type="checkbox" name="privateCheck" value="private">Private Room<br>
+          </div>
+          <p>When you have selected your preffered tags, please hit apply. </p>
+          <input type="submit" value="Apply">
+          </form>
+          <button class="cancelBtn" onclick="toggle_visibility('popup-Box1-Position');">Cancel</button>
         </div><!-- End of popup1-Yes-Contents -->
 
       </div><!-- popup-Container end-->
@@ -47,13 +66,14 @@
     </div><!-- popup-Box1-Position end -->
 
 <div id="wrapper">
-  <button class= "+1" onclick="toggle_visibility('popup-Box1-Position');" data-inline="true">+1</button>
+  <button id= "+1" onclick="toggle_visibility('popup-Box1-Position');" data-inline="true">+1</button>
 </div><!-- wrapper end-->
 
 
 
-<!--Visibility toggle function for pop-up window-->
+
 <script>
+// Visibility toggle function for pop-up window
       function toggle_visibility(id) {
          var e = document.getElementById(id);
          if(e.style.display == 'block')
@@ -61,15 +81,19 @@
          else
             e.style.display = 'block';
       }
-//******CODE BELOW IS NOT WORKING******
-//script to fade out popup1-Contents and fade in popup1-Yes-Contents
+
+//script to fade out popup1-Contents and fade in popup1-Yes-Contents when pushing yes button
       $(document).ready(function(){
-        $("#popup-1-Yes-Contents").hide() //can't fadeIn() unless hidden, display: none set in css
-        $("yesBtn").click(function(){
-          ("#popup-1-Yes-Contents").show();
+        $(".yesBtn").click(function(){
+          $("#popup1-Yes-Contents").fadeIn();
+          $("#popup1-Contents").fadeOut();
+        });
       });
-        $("yesBtn").click(function(){
-          ("#popup1-Contents").hide();
+//script that fades in popup1-Yes-Contents nad fades out popup1-Contents when pushing cancel button
+      $(document).ready(function(){
+        $(".cancelBtn").click(function(){
+          $("#popup1-Yes-Contents").fadeOut();
+          $("#popup1-Contents").fadeIn();
         });
       });
 
